# openai-magic-instantiate

./: .gitignore  README.md
openai-magic-instantiate/: Cargo.toml  README.md
openai-magic-instantiate-derive/: Cargo.toml
openai-magic-instantiate-derive/src/: lib.rs
openai-magic-instantiate/src/: README.md  export.rs  lib.rs
